@@ -8,6 +8,7 @@ import jakarta.servlet.RequestDispatcher;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
 
@@ -34,8 +35,20 @@ public class EmployeeController {
                                 @RequestParam(required = false) int department,
                                 @RequestParam(required = false) double salary) {
 
-        if(firstName == null || lastName == null || firstName.isBlank() || lastName.isBlank()) {
+        if(StringUtils.isBlank(firstName) || StringUtils.isBlank(lastName)) {
             throw new MissingParametersException("Error! Something is missing");
+        }
+
+        if(!StringUtils.isAlpha(firstName) || !StringUtils.isAlpha(firstName)) {
+            throw new WrongEntryException("Error! Something is missing");
+        }
+
+        if(StringUtils.isAllLowerCase(firstName)) {
+            firstName = StringUtils.capitalize(firstName);
+        }
+
+        if(StringUtils.isAllLowerCase(lastName)) {
+            lastName = StringUtils.capitalize(lastName);
         }
 
         Employee employee = new Employee(firstName, lastName, employeeService.convertIntToEnum(department), salary);
